Text changes to the contributors page. Also minor style changes to the Document - About Tab for min resolution (prevent horizontal scrollbar).
git-svn-id: https://source.caret.cam.ac.uk/svn/projects/ul-foundations/foundationsviewer/trunk@9746 59899196-baf2-4bc4-a94d-4a08719e171f

--- a/src/main/webapp/styles/style-document.css
+++ b/src/main/webapp/styles/style-document.css
@@ -59,6 +59,7 @@ table {
 
 #metadata-about {
 	max-width: 500px;
+	min-width: 300px;
 }
 
 /* Rounded Boxes */
@@ -83,7 +84,7 @@ table {
 }
 
 .rbtop div,.rbtop,.rbbot div,.rbbot {
-	width: 500px;
+	width: 100%;
 	height: 7px;
 	font-size: 1px;
 }
@@ -93,7 +94,7 @@ table {
 }
 
 .rbroundbox {
-	width: 500px;
+	width: 100%;
 	margin: 1em auto;
 	float: left;
 }
